# oop2_ex01

./: CMakeLists.txt  README.md
include/: DuplicateShape.h  DuplicatedShape.h  Rectangle.h  Shape.h  ShapeCalculator.h  Square.h  StackedShape.h  Triangle.h
src/: CMakeLists.txt  DuplicatedShape.cpp  Rectangle.cpp  ShapeCalculator.cpp  Square.cpp  StackedShape.cpp  Triangle.cpp  helper.txt  main.cpp
